tests/specs/node/dynamic_import_and_require_dual/jsdoc_import_decl.out
Check file:///[WILDLINE]/jsdoc_import_decl.js
error: TS2345 [ERROR]: Argument of type '"value"' is not assignable to parameter of type '"mjs"'.
log("value");
    ~~~~~~~
    at file:///[WILDLINE]/jsdoc_import_decl.js:12:5
